PROJECT(utils)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(UTILS_LIB utils)
SET(CMAKE_AR ar)

SET(LIB_VERSION 0.0.1)
IF(WIN32)
	MESSAGE(STATUS "windows do not need install")
ELSE(WIN32)
	SET(CMAKE_INSTALL_PREFIX /usr/local/${UTILS_LIB}-${LIB_VERSION})
ENDIF(WIN32)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

ADD_SUBDIRECTORY(src lib)