IF(WIN32)
	ADD_DEFINITIONS(-D_REENTRANT -D_MULTI_THREAD)
ELSE(WIN32)
	ADD_DEFINITIONS(-g -o3 -W -Wall -fPIC -D_REENTRANT -D_MULTI_THREAD)
ENDIF(WIN32)

IF(NOT WIN32)
	LINK_LIBRARIES(pthread)
ENDIF(NOT WIN32)

FILE(GLOB_RECURSE DIR_HEADERS "*.h")

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
AUX_SOURCE_DIRECTORY(tinyxml/ DIR_TINYXMLSRCS)
IF(WIN32)
	ADD_LIBRARY(utils STATIC ${DIR_SRCS} ${DIR_HEADERS} ${DIR_TINYXMLSRCS})
ELSE(WIN32)
	ADD_LIBRARY(utils SHARED ${DIR_SRCS} ${DIR_TINYXMLSRCS})
ENDIF(WIN32)
SET_TARGET_PROPERTIES(utils PROPERTIES VERSION 0.0.1)

IF(WIN32)
	MESSAGE(STATUS "windows do not need install")
ELSE(WIN32)
	INSTALL(TARGETS utils LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
	INSTALL(DIRECTORY ./ serialization stream template tinyxml DESTINATION 
		${CMAKE_INSTALL_PREFIX}/include PATTERN "*.cpp" EXCLUDE PATTERN ".svn" EXCLUDE PATTERN "gen" EXCLUDE PATTERN "*.txt" EXCLUDE)
ENDIF(WIN32)		